# yeek

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  skills-lock.json  tsconfig.app.json
.github/workflows/: release.yml
.superpowers/brainstorm/12479-1774235879/: .server-stopped  llm-config.html
.superpowers/brainstorm/93452-1774139030/: .server-stopped  waiting.html
.superpowers/brainstorm/95426-1774172491/: .server-stopped  features.html  layout.html  storage.html
demo/: package-lock.json  package.json
docs/: session-data-structure-claudecode.md
docs/superpowers/specs/: 2026-04-13-yeek-tui-design.md
electron-app/: electron-builder.yml  package-lock.json  package.json  tsconfig.json
electron-app/src/: main.ts  preload.ts
reference/specs/: 2026-04-17-session-visualization-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapter/: mod.rs
src-tauri/src/adapter/claudecode/: diagnostic.rs  mod.rs
src-tauri/src/adapter/codex/: mod.rs
src-tauri/src/app/: commands.rs  errors.rs  events.rs  mod.rs  state.rs
src-tauri/src/domain/: mod.rs  plugin.rs  session.rs  source.rs
src-tauri/src/http/: app_state.rs  dto.rs  emitter.rs  error.rs  mod.rs  routes.rs
src-tauri/src/service/: delete_planner.rs  mod.rs
src-tauri/src/store/: actions.rs  messages.rs  mod.rs  schema.rs  sessions.rs  sources.rs
src-tauri/src/sync/: background.rs  mod.rs  planner.rs  watcher.rs
src-tauri/src/tauri_bridge/: commands.rs  emitter.rs  mod.rs
src/app/providers/: index.tsx
src/app/shell/: index.tsx  types.ts  use-grouped-sessions.ts  use-keyboard-navigation.ts  use-session-selection.ts  use-zoom.ts
src/components/: error-boundary.tsx  icons.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  scroll-area.tsx  tabs.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  zh-CN.json
src/lib/: api.ts  constants.ts  events.ts  formatters.ts  hooks.ts  transport.ts
src/lib/__tests__/: constants.test.ts  formatters.test.ts
src/pages/marketplace/: marketplace-page.tsx
src/pages/memory/: memory-page.tsx
src/pages/sessions/: ai-bubble.tsx  attachment-marker.tsx  message-card.tsx  meta-line.tsx  session-detail-pane.tsx  (+11 more)
(+20 files in other folders)
