[package]
name = "yeek"
version = "0.1.0"
description = "Session memory manager for local agent sessions"
authors = ["hipnusleo"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "yeek_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.34", features = ["bundled"] }
dirs = "6"
notify = "7"
