[package]
name = "yeek"
version = "0.1.0"
description = "Session memory manager for local agent sessions"
authors = ["hipnusleo"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
default-run = "yeek-tauri"

[lib]
name = "yeek_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "yeek-tauri"
path = "src/main.rs"
required-features = ["tauri-shell"]

[[bin]]
name = "yeek-server"
path = "src/bin/server.rs"
required-features = ["http-server"]

[features]
default = ["tauri-shell"]
tauri-shell = ["dep:tauri", "dep:tauri-build", "dep:tauri-plugin-log"]
http-server = ["dep:axum", "dep:tower-http", "dep:tower", "dep:tokio-stream"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [], optional = true }

[dependencies]
# Core (always included)
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.34", features = ["bundled"] }
dirs = "6"
notify = "7"

# Tauri shell (optional)
tauri = { version = "2.10.0", features = [], optional = true }
tauri-plugin-log = { version = "2", optional = true }

# HTTP server (optional)
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
tower = { version = "0.5", optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
